--- a/src/components/MessageCard.css
+++ b/src/components/MessageCard.css
@@ -1,28 +1,30 @@
 .message-card {
   width: -moz-fit-content;
   width: fit-content;
-  max-width: 50%;
-  word-wrap: break-word;
-  background-color: rgb(201, 201, 201);
-  padding: 10px;
+  max-width: 70%;
   margin: 0;
   margin-bottom: 1em;
-  border-radius: 10px;
-  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
+  padding: 1rem 1.25rem;
+  border-radius: 1.25rem 1.25rem 1.25rem 0;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  background-color: #f2f2f2;
+  color: #262626;
+  text-align: left;
+  word-wrap: break-word;
 }
 
 .message-card__user {
   width: -moz-fit-content;
   width: fit-content;
-  max-width: 50%;
+  max-width: 70%;
+  margin: 0 0 1em auto;
+  padding: 1rem 1.25rem;
+  border-radius: 1.25rem 1.25rem 0 1.25rem;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  background-color: #aebcff;
+  color: #000d48;
+  text-align: left;
   word-wrap: break-word;
-  background-color: #8ca0ff;
-  padding: 10px;
-  margin: 0;
-  margin-bottom: 1em;
-  border-radius: 10px;
-  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
-  margin-left: auto;
 }
 
 .message-card p,
@@ -33,14 +35,14 @@ h6 {
 }
 
 .message-card h6 {
+  color: #959595;
   text-align: left;
-  color: #5366c7;
   font-size: 10px;
 }
 
 .message-card__user h6 {
+  color: #375aff;
   text-align: right;
-  color: #555;
   font-size: 10px;
 }
 
